syntax = "proto3";

package network;

service ProverNetwork {
    // Get usage summary by hour for a specified requester.
    rpc GetRequesterUsage(GetRequesterUsageRequest)
        returns (GetRequesterUsageResponse) {}
}

message UsageSummary {
  // The total amount of gas (reserved + on-demand).
  string total_gas = 1;
  // The total amount of reserved gas.
  string reserved_gas = 2;
  // The total amount of on-demand gas.
  string on_demand_gas = 3;
}

message RequesterUsageSummary {
  // The hour boundary as an ISO timestamp string (e.g., 2024-01-15T14:00:00Z).
  string hour = 1;
  // The usage summary associated with this requester.
  UsageSummary usage_summary = 2;
}

message GetRequesterUsageRequest {
  // The ISO timestamp string of the usage start time (e.g., 2024-01-15T14:00:00Z).
  string start_time = 1;
  // The ISO timestamp string of the usage end time (e.g., 2024-01-15T17:00:00Z).
  string end_time = 2;
  // The hex string of the requester to get the usage for (e.g., 0x...12).
  string requester = 3;
}

message GetRequesterUsageResponse {
  // A list summarizing usage by month and clusters for the specified payer.
  repeated RequesterUsageSummary usage_summary = 1;
}
